# loclock_backend

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 001_initial_schema.py  00e4262bfe18_create_blocked_ips_table.py  18c8f83f738e_add_contact_wechat_field_to_links.py  3662f07fbbea_add_2fa_fields_to_users.py  4efce910ef21_increase_totp_secret_length.py  629801496aba_add_is_banned_to_links.py  81fd889e48f6_add_expire_at_and_max_visits_to_links.py  981237377003_add_is_deleted_to_links.py  e345ace75354_add_title_to_links.py
app/: main.py
app/api/: __init__.py  admin.py  auth.py  links.py
app/core/: __init__.py  config.py  database.py  geo.py  middleware.py  rate_limit.py  security.py
app/models/: __init__.py  blocked_ip.py  link.py  user.py
app/schemas/: __init__.py  blocked_ip.py  link.py  user.py
scripts/: create_superadmin.py  generate_test_data.py
